# zisk

./: .gitignore  Cargo.toml  riscv64imad-zisk-zkvm-elf.json
.github/workflows/: build.yml  cargo.toml.patch  docker.yml  entrypoint-no-entrypoint.patch  pr.yml
book/: SUMMARY.md
book/getting_started/: distributed_execution.md  installation.md  precompile_hints.md  precompiles.md
cli/: Cargo.toml
cli/src/: ux.rs
common/: Cargo.toml
common/src/: executor_stats.rs  hints.rs  planner_helpers.rs  types.rs  zisk_lib_init.rs
core/: Cargo.toml
core/src/: direct_calls.rs  elf2rom.rs  elf_extraction.rs  helpers.rs  inst_context.rs  lib.rs  mem.rs  riscv2zisk.rs  riscv2zisk_context.rs  zisk_inst.rs  zisk_inst_builder.rs  zisk_ops.rs  zisk_rom_2_asm.rs
definitions/src/: syscall.rs
distributed/: README.md
emulator/: Cargo.toml
emulator-asm/: Makefile
emulator-asm/src/: c_provided.c  c_provided.hpp  client.c  configuration.c  constants.hpp  emu.c  emu.hpp  globals.c  globals.hpp  log.c  log.hpp  main.c  server.c  trace.c  trace_logs.c
emulator/src/: elf_symbol_reader.rs  emu.rs  emu_context.rs  emu_options.rs  lib.rs  regions_of_interest.rs  stats.rs  stats_cost_mark.rs  stats_costs.rs  stats_coverage_report.rs  stats_report.rs
executor/: Cargo.toml
executor/src/: asm_resources.rs  emu_asm.rs  emu_asm_stub.rs  emu_rust.rs  executor.rs  hints_pipeline.rs  hints_shmem.rs  lib.rs  rom_executor.rs  sm_static_bundle.rs  static_data_bus.rs  static_data_bus_collect.rs  utils.rs
hints/: Cargo.toml
hints/src/: hints.rs  hints_pipeline.rs  hints_processor.rs  hints_stream.rs  lib.rs
lib-c/c/: Makefile
pil/: operations.pil  opids.pil  zisk.pil
precompiles/common/: Cargo.toml
precompiles/dma/: Cargo.toml
precompiles/hints/: Cargo.toml
rom-setup/src/: asm_setup.rs
sdk/: Cargo.toml
state-machines/: starkstructs.json
test-verifier/: Cargo.toml
verifier/: Cargo.toml
verifier/src/: verifier.rs
witness-computation/: Cargo.toml
ziskos-hints/: Cargo.toml  build.rs  src
ziskos-static-lib/: Cargo.toml
ziskos-static-lib/src/: lib.rs
ziskup/: ziskup
(+340 files in other folders)
