[package]
name = "zisk-verifier"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
proofman-verifier = { path = "../../pil2-proofman/verifier", features = ["verify"] }
anyhow = { workspace = true }

[features]
default = []
