[package]
name = "ziskos-static-lib"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
description = "Static C library exposing the standard zkvm accelerator interface"

[lib]
crate-type = ["staticlib"]

[dependencies]
ziskos = { workspace = true }

# When building this crate as a standalone package (outside the workspace),
# use fat LTO and a single codegen unit for maximum dead-code elimination.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
