[package]
name = "ziskos-static-lib"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
description = "Static C library exposing the standard zkvm accelerator interface"

[lib]
crate-type = ["staticlib"]

[dependencies]
ziskos = { workspace = true }

